feat (update_status, profile_screen) : fix verified condition in update_status, disable EditText on Profile

--- a/app/src/main/res/layouts/navbar/layout/profile_screen.xml
+++ b/app/src/main/res/layouts/navbar/layout/profile_screen.xml
@@ -142,6 +142,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/golos_text_regular"
+                        android:editable="false"
                         android:hint=" "
                         android:maxLines="1"
                         android:padding="15dp"
@@ -172,6 +173,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/golos_text_regular"
+                        android:editable="false"
                         android:hint=" "
                         android:maxLines="1"
                         android:padding="15dp"
@@ -201,6 +203,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/golos_text_regular"
+                        android:editable="false"
                         android:hint=" "
                         android:maxLines="1"
                         android:padding="15dp"
@@ -231,6 +234,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/golos_text_regular"
+                        android:editable="false"
                         android:maxLines="1"
                         android:padding="15dp"
                         android:textColor="@color/font_primary_color"
@@ -260,6 +264,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/golos_text_regular"
+                        android:editable="false"
                         android:hint=" "
                         android:maxLines="1"
                         android:padding="15dp"
@@ -290,6 +295,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/golos_text_regular"
+                        android:editable="false"
                         android:hint=" "
                         android:maxLines="1"
                         android:padding="15dp"
@@ -303,7 +309,8 @@
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginBottom="12dp"
+                    android:padding="15dp"
                     android:text="GANTI PASSWORD"
                     android:textAppearance="@style/text_bold_primary"
                     app:cornerRadius="12dp"
@@ -313,6 +320,7 @@
                     style="@style/Widget.MaterialComponents.Button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="15dp"
                     android:layout_marginBottom="35dp"
                     android:backgroundTint="@color/primary_color"
                     android:text="LOG OUT"
