--- a/app/src/main/res/layouts/navbar/home_menu/layout/update_status_screen.xml
+++ b/app/src/main/res/layouts/navbar/home_menu/layout/update_status_screen.xml
@@ -48,7 +48,8 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="14dp"
+                android:padding="15dp"
+                android:layout_marginBottom="12dp"
                 android:text="Update Status"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
@@ -64,6 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:translationY="0dp"
+                android:layout_marginBottom="12dp"
                 app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="12dp"
                 app:strokeColor="@color/primary_color"
@@ -175,11 +177,12 @@
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.button.MaterialButton
+                android:padding="15dp"
                 android:id="@+id/btn_kirim_status"
                 style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+
                 android:layout_marginBottom="35dp"
                 android:backgroundTint="@color/primary_color"
                 android:text="KIRIM"
