--- a/app/src/main/res/layouts/navbar/home_menu/layout/input_judul_ta_screen.xml
+++ b/app/src/main/res/layouts/navbar/home_menu/layout/input_judul_ta_screen.xml
@@ -1,129 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/secondary_color"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".navbar.Profile">
+    android:background="@color/white_color"
+    tools:context=".navbar.HomeMenu.InputJudulTA">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Profile"
-        android:textSize="30dp"
-        android:textColor="@color/white_color"
-        android:textStyle="bold"
-        android:layout_gravity="center"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-<<<<<<< Updated upstream
-</FrameLayout>
-=======
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-
-            <FrameLayout
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/appbar_input_judul_ta"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:layout_marginTop="15dp">
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/user_photo_profile"
-                    android:layout_width="83dp"
-                    android:layout_height="83dp"
-                    android:src="@drawable/img_model_profile" />
-
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginLeft="57dp"
-                    android:layout_marginTop="60dp"
-                    android:src="@drawable/icon_profile_camera" />
-            </FrameLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingStart="107dp"
-                android:paddingTop="30dp"
-                android:paddingRight="75dp"
-                android:paddingBottom="24dp"
+                android:layout_height="62dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/toolbar_bottom_border"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/profile_user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="User lorem ipsum"
-                    android:textAppearance="@style/text_bold_primary" />
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="Input Judul TA"
+                    android:textAppearance="@style/text_bold_font_primary"
+                    android:textSize="16sp" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/profile_user_email"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="loremipsum@gmail.com"
-                    android:textAppearance="@style/text_regular_secondary"
-                    android:textSize="12sp" />
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/profile_user_status"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="Status skripsi"
-                    android:textAppearance="@style/text_regular_secondary"
-                    android:textSize="12sp" />
-            </LinearLayout>
-
-            <View
-                android:id="@+id/view_with_border"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginLeft="12dp"
-                android:layout_marginTop="113dp"
-                android:layout_marginRight="12dp"
-                android:background="@color/border_color" />
+            </com.google.android.material.appbar.MaterialToolbar>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="128dp"
-                android:orientation="vertical"
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp">
+                android:layout_below="@id/appbar_input_judul_ta"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:orientation="vertical">
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="Nama Lengkap"
+                    android:text="Judul TA"
                     android:textAppearance="@style/text_semi_bold_font_primary" />
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/InputLayout_profile_nama_lengkap"
+                    android:id="@+id/InputLayout_input_judul_ta"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/text_field_round_border"
-
                     app:boxBackgroundMode="none"
                     app:hintEnabled="false">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/EditText_profile_nama_lengkap"
+                        android:id="@+id/EditText_input_judul_ta"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:editable="false"
+                        android:layout_height="58dp"
                         android:fontFamily="@font/golos_text_regular"
                         android:hint=" "
                         android:maxLines="1"
@@ -138,23 +85,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="NIM"
+                    android:text="Abstrak TA"
                     android:textAppearance="@style/text_semi_bold_font_primary" />
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/InputLayout_profile_nim"
+                    android:id="@+id/InputLayout_abstrak_ta"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="118dp"
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/text_field_round_border"
                     app:boxBackgroundMode="none"
                     app:hintEnabled="false">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/EditText_profile_nim"
+                        android:id="@+id/EditText_abstrak_ta"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:editable="false"
+                        android:layout_height="58dp"
                         android:fontFamily="@font/golos_text_regular"
                         android:hint=" "
                         android:maxLines="1"
@@ -168,11 +114,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="No HP"
+                    android:text="Dosen Pembimbing 1"
                     android:textAppearance="@style/text_semi_bold_font_primary" />
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/InputLayout_profile_no_hp"
+                    android:id="@+id/InputLayout_dosen_pembimbing_1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
@@ -181,71 +127,9 @@
                     app:hintEnabled="false">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/EditText_profile_no_hp"
+                        android:id="@+id/EditText_dosen_pembimbing_1"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:editable="false"
-                        android:fontFamily="@font/golos_text_regular"
-                        android:hint=" "
-                        android:maxLines="1"
-                        android:padding="15dp"
-                        android:textColor="@color/font_primary_color"
-                        android:textColorHint="@color/font_secondary_variant"
-                        android:textSize="12sp" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:text="Status Skripsi"
-                    android:textAppearance="@style/text_semi_bold_font_primary" />
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/InputLayout_profile_status_skripsi"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/text_field_round_border"
-                    app:boxBackgroundMode="none"
-                    app:hintEnabled="false">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/EditText_profile_status_skripsi"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:editable="false"
-                        android:fontFamily="@font/golos_text_regular"
-                        android:maxLines="1"
-                        android:padding="15dp"
-                        android:textColor="@color/font_primary_color"
-                        android:textColorHint="@color/font_secondary_variant"
-                        android:textSize="12sp" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:text="Dosen Pembimbing"
-                    android:textAppearance="@style/text_semi_bold_font_primary" />
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/InputLayout_profile_dosen_pembimbing"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/text_field_round_border"
-                    app:boxBackgroundMode="none"
-                    app:hintEnabled="false">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/EditText_profile_dosen_pembimbing"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:editable="false"
+                        android:layout_height="58dp"
                         android:fontFamily="@font/golos_text_regular"
                         android:hint=" "
                         android:maxLines="1"
@@ -260,11 +144,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="Dosen Penguji"
+                    android:text="Dosen Pembimbing 2"
                     android:textAppearance="@style/text_semi_bold_font_primary" />
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/InputLayout_profile_dosen_penguji"
+                    android:id="@+id/InputLayout_dosen_pembimbing_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
@@ -273,10 +157,9 @@
                     app:hintEnabled="false">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/EditText_profile_dosen_penguji"
+                        android:id="@+id/EditText_dosen_pembimbing_2"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:editable="false"
+                        android:layout_height="58dp"
                         android:fontFamily="@font/golos_text_regular"
                         android:hint=" "
                         android:maxLines="1"
@@ -284,36 +167,56 @@
                         android:textColor="@color/font_primary_color"
                         android:textColorHint="@color/font_secondary_variant"
                         android:textSize="12sp" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:text="Dosen Pembimbing 3"
+                    android:textAppearance="@style/text_semi_bold_font_primary" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/InputLayout_dosen_pembimbing_3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/text_field_round_border"
+                    app:boxBackgroundMode="none"
+                    app:hintEnabled="false">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/EditText_dosen_pembimbing_3"
+                        android:layout_width="match_parent"
+                        android:layout_height="58dp"
+                        android:fontFamily="@font/golos_text_regular"
+                        android:hint=" "
+                        android:maxLines="1"
+                        android:padding="15dp"
+                        android:textColor="@color/font_primary_color"
+                        android:textColorHint="@color/font_secondary_variant"
+                        android:textSize="12sp" />
+
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/button_profile_logout"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="12dp"
-                    android:padding="15dp"
-                    android:text="GANTI PASSWORD"
-                    android:textAppearance="@style/text_bold_primary"
+                    android:layout_height="51dp"
                     app:cornerRadius="12dp"
-                    app:strokeColor="@color/primary_color" />
-
-                <com.google.android.material.button.MaterialButton
+                    android:layout_marginTop="57dp"
+                    android:layout_marginBottom="30dp"
+                    android:text="KIRIM"
                     style="@style/Widget.MaterialComponents.Button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="35dp"
                     android:backgroundTint="@color/primary_color"
-                    android:padding="15dp"
-                    android:text="LOG OUT"
                     android:textAppearance="@style/text_bold_plain"
-                    android:textColor="@color/white_color"
-                    app:cornerRadius="12dp" />
+                    android:textColor="@color/white_color" />
+
+
+
+
             </LinearLayout>
         </RelativeLayout>
 
     </ScrollView>
 
-
 </androidx.constraintlayout.widget.ConstraintLayout>
->>>>>>> Stashed changes
