--- a/app/src/main/res/layouts/navbar/layout/chat_screen.xml
+++ b/app/src/main/res/layouts/navbar/layout/chat_screen.xml
@@ -15,33 +15,14 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/appbar_chat"
-            android:layout_width="match_parent"
-            android:layout_height="62dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/toolbar_bottom_border"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="Chat"
-                android:textAppearance="@style/text_bold_font_primary"
-                android:textSize="16sp" />
-
-        </com.google.android.material.appbar.MaterialToolbar>
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/appbar_chat">
+            android:layout_height="wrap_content">
 
             <LinearLayout
+                android:paddingTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -50,7 +31,7 @@
                     android:id="@+id/search_lecture"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/appbar_chat"
+
                     android:layout_marginLeft="12dp"
                     android:layout_marginRight="12dp"
                     android:layout_marginBottom="20dp"
