--- a/app/src/main/res/layouts/navbar/home_menu/layout/form_pengajuan_screen.xml
+++ b/app/src/main/res/layouts/navbar/home_menu/layout/form_pengajuan_screen.xml
@@ -24,6 +24,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <ImageView
+                android:id="@+id/btn_back_form_pengajuan"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/icon_back" />
+
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -36,11 +42,11 @@
         </com.google.android.material.appbar.MaterialToolbar>
 
         <LinearLayout
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/appbar_form_pengajuan"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
             android:orientation="vertical">
 
             <com.google.android.material.textview.MaterialTextView
@@ -131,16 +137,16 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="match_parent"
                 android:layout_height="51dp"
-                app:cornerRadius="12dp"
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="320dp"
-                android:text="KIRIM"
-                style="@style/Widget.MaterialComponents.Button"
                 android:backgroundTint="@color/primary_color"
+                android:text="KIRIM"
                 android:textAppearance="@style/text_bold_plain"
-                android:textColor="@color/white_color" />
+                android:textColor="@color/white_color"
+                app:cornerRadius="12dp" />
 
 
         </LinearLayout>
