--- a/app/src/main/res/layouts/navbar/home_menu/layout/update_status_screen.xml
+++ b/app/src/main/res/layouts/navbar/home_menu/layout/update_status_screen.xml
@@ -24,6 +24,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <ImageView
+                android:id="@+id/btn_back_update_status"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/icon_back"/>
+
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
