--- a/app/src/main/res/layouts/navbar/home_menu/layout/recycle_update_status_screen.xml
+++ b/app/src/main/res/layouts/navbar/home_menu/layout/recycle_update_status_screen.xml
@@ -16,7 +16,7 @@
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            app:cardCornerRadius="12dp"
             android:layout_marginBottom="12dp"
             app:cardBackgroundColor="@color/secondary_variant">
 
