--- a/app/src/main/res/layouts/navbar/layout/home_screen.xml
+++ b/app/src/main/res/layouts/navbar/layout/home_screen.xml
@@ -63,6 +63,7 @@
                 android:gravity="end">
 
                 <ImageView
+                    android:id="@+id/btn_notifikasi"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_marginLeft="324dp"
@@ -385,6 +386,7 @@
                         android:layout_height="wrap_content">
 
                         <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/btn_lihat_semua_notifikasi"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_marginTop="21dp"
